# movie_review

./: .env  main.py  pyproject.toml  setup_models.py
src/core/: __init__.py  config.py  db.py  logger.py  redis.py
src/domain/: auth.py  film.py  profile.py  review.py
src/ml_models/: build_recommendation_model.py
src/persistence/: auth.py  dependencies.py  film.py  helper_funcs.py  profile.py  review.py
src/routers/: auth.py  film.py  profile.py  review.py
src/schemas/: auth.py  base_schema.py  common.py  film.py  profile.py  review.py
src/services/: auth.py  film.py  profile.py  recommender.py  review.py
src/utils/: email.py  jwt.py
