[project]
name = "unproject"
version = "0.1.0"
description = ""
authors = [
    {name = "NimaMiri",email = "nimamiri9248@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
